# ai-code-reviewer

./: Dockerfile  README.md  api.py  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
code-review-env/: README.md  baseline.py
code-review-env/env/: environment.py  grader.py  models.py
env/: config.py  environment.py  grader.py  models.py  tasks.py
server/: app.py  code_review_environment.py
