[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv environment for AI pull request code review evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai>=1.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]